und-1160 Patterns  > Filter and search bar > Border and alignment issues

--- a/stories/Components/Forms/Dropdowns/Multiselect/multi-select.scss
+++ b/stories/Components/Forms/Dropdowns/Multiselect/multi-select.scss
@@ -112,7 +112,7 @@
         &::after {
           @extend %arrow;
 
-          right: $spacing-16;
+          right: 0.875rem;
         }
       }
     }
